--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="6a97888e-site-verification" content="07c79feb9b9eee6d04baf6892bf985af">
 <!-- 🔥 X / Twitter Video Preview -->
 <meta property="og:type" content="video.other">
 <meta property="og:title" content="Watch Before It’s Gone 👀">
